# doris

./: .gitignore  SConstruct  configure.ac  notes.html  parse.py
config/: config-ja3.yaml  config.yaml
costg/: check_003directTideMoon.cpp  check_003directTideSun.cpp  check_01eop.cpp  check_01rot.cpp  check_02grav.cpp  check_02grav_icrf.cpp  check_02grav_itrf.cpp  check_04solidEarthTide_icrf.cpp  check_05oceanTide.cpp  check_XXitrf2icrf_orbit.cpp  check_aod1b_atmosphericTides.cpp  check_aod1b_atmosphericTides_s1.cpp  check_costg.py  check_fes14b_ocean_tide.cpp  check_gravity_field.cpp  check_itrf2icrf.cpp  check_ocean_pole_tide.cpp  check_pole_tide.cpp  check_relativistic.cpp  check_rotary_noeop.cpp  check_solid_earth_tide.cpp  check_third_body.cpp  costg_parsers.cpp  costg_utils.hpp  plot_costg_01earthRotation_interpolatedEOP.py  plot_costg_01earthRotation_rotarymatrix.py  plot_costg_02gravityfield_itrf.py  plot_costg_03directTideMoon.py  plot_costg_03directTideSun.py  plot_costg_03directTides.py  plot_costg_04solidEarthTide_icrf.py  plot_costg_05poleTide_icrf.py  plot_costg_06oceanPoleTide_icrf.py  readme.md  (+2 more)
src/: Makefile.am  antenna_pcv.hpp  associated_legendre.hpp  astrodynamics.hpp  atmosphere.hpp  attitude.hpp  base_error.hpp  beacon_tbl.hpp  cmat2d.hpp  compact2dmat.hpp  cweb.hpp  doodson2intarray.cpp  doris_flags  doris_observation_equations.hpp  doris_rinex.cpp  doris_rinex.hpp  doris_system_info.cpp  doris_system_info.hpp  doris_utils.hpp  egravity.hpp  enum_bitset.hpp  eop.hpp  extract_doppler_count.cpp  factorial.hpp  fit_rfo.cpp  gauss_jackson.hpp  get_pdop_crd.cpp  harmonic_coeffs.hpp  icgemio.hpp  iers_bulletin.hpp  integration_parameters.cpp  integrators.hpp  irunge_kutta_nystrom.hpp  itrs2gcrs.cpp  ode.hpp  orbit_integration.hpp  orbit_integrators.hpp  orbit_integrators_coefficients.hpp  planetpos.hpp  read_rnx_header.cpp  (+23 more)
src/astrodynamics/: drag.cpp  kepler.cpp  kepler2state.cpp  occultation.cpp  occultation.hpp  perifocal.cpp  pos2ra.cpp  propagate_osculating_elements.cpp  propagate_state.cpp  solar_radiation.cpp  state2kepler.cpp  state_partials.cpp
src/atmosphere/: exponential_atmospheric_model.cpp  jb2008.cpp  msis86.cpp  nrlmsise-00.cpp  nrlmsise00.cpp  nrlmsise00.hpp  nrlmsise00_ccor.cpp  nrlmsise00_ccor2.cpp  nrlmsise00_const.hpp  nrlmsise00_data.cpp  nrlmsise00_densm.cpp  nrlmsise00_densu.cpp  nrlmsise00_dnet.cpp  nrlmsise00_get_flux_data.cpp  nrlmsise00_ghp7.cpp  nrlmsise00_glatf.cpp  nrlmsise00_glob7s.cpp  nrlmsise00_globe7.cpp  nrlmsise00_gtd7.cpp  nrlmsise00_gtd7d.cpp  nrlmsise00_gts7.cpp  nrlmsise00_params.cpp  nrlmsise00_splini.cpp  nrlmsise00_splint.cpp  nrlmsise_spline.cpp  readme.md
src/atmosphere/dtm2020/: dtm2020.cpp  dtm2020.hpp  dtm2020_dtm3.cpp  dtm2020_geogm.cpp  dtm2020_get_solar_data.cpp  dtm2020_glddtm.cpp  dtm2020_lecdtm.cpp  dtm2020_map_model_coeffs.cpp  dtm2020_sigma.cpp
src/beacon_tbl/: beacon_tbl.cpp
src/doris/: doris_system_info.cpp  extract_doppler_count.cpp  fit_rfo.cpp
src/filters/: ekf.cpp  ekf.hpp  filters.hpp  models.hpp
src/gravity/: associated_legendre.hpp  associated_legendre_compute.cpp  associated_legendre_normalize.cpp  earthgravity.cpp  gravity_acceleration.cpp  harmonic_coeffs.cpp  icgemio_rddata.cpp  icgemio_rdhead.cpp  lagrange_poly.cpp  parse_coefficients.cpp  parse_stokes_coefficients.cpp  point_mass_acceleration.cpp  sh_cunningham_normalized_gradient.cpp  stokes_coeffs.cpp
src/ids/: get_pdop_crd.cpp
src/iers/: atmospheric_tide.cpp  atmospheric_tide_acceleration.cpp  bulletinb.cpp  doodson.cpp  doodson_octide.cpp  download_bulletinb.cpp  eop.md  eop_file.cpp  eop_interpolate.cpp  eop_utils.cpp  filter_waves.cpp  ocean_pole_tide.cpp  ocean_tide.cpp  ocean_tide_acceleration.cpp  parse_c04.cpp  parse_desai_ocean_pole_coeffs.cpp  parse_ocean_tide_CSnm.cpp  parse_ocen_tide_CSnm.cpp  permanent_tide.cpp  pole_tide.cpp  solid_earth_pole_tide.cpp  solid_earth_tide.cpp  solid_earth_tide_legendre.cpp  solid_earth_tide_step1.cpp  solid_earth_tide_step2.cpp  solid_earth_tide_step2_doodson.cpp  tables6.ods  tides.hpp
src/integrators/: ddeabm.hpp  odefun.hpp  rkf45.hpp  rkf45_fehl.cpp  sgode.cpp  sgode.hpp  sgode_de.cpp  sgode_intrp.cpp  sgode_step.cpp
src/ode/: interp.cpp  sg_integrate.cpp  sg_interp.cpp  sg_step.cpp  shampine_gordon_step.cpp
src/planets/: cspice_utils.cpp  moonpos.cpp  planet_pos.cpp  planet_to_naif_id.cpp  sunpos.cpp
src/relativity/: relativistic_clock_correction.cpp
src/rinex/: doris_rinex.cpp  fit_rfo.cpp  read_rnx_header.cpp  rnx_datablock_iterator.cpp
src/satellite/: drag.cpp  kepler2state.cpp  occultation.cpp  pos2ra.cpp  state2kepler.cpp
src/satellites/: cryosat2.hpp  cryosat2_quaternions.cpp  jason3.hpp  jason3_corrections.cpp  jason3_quaternions.cpp  jason3_quaternions.hpp  jason3_solar_array.cpp  satellite_corrections.cpp
src/var/: celestrack.hpp  celestrack_swdata.cpp  celestrak.hpp  celestrak_swdata.cpp  yaml_utils.cpp
src/web/: http_get.cpp
test/: CioGcrs2Itrs.cpp  Makefile.am  check_itrf2gcrf_given_eop.cpp  complete_eop_example.cpp  exc83.cpp  fit_rfo_values.cpp  linfit.py  match_sp3_state.cpp  pod.cpp  read_rinex.cc  rinex_interpolator.cpp  rinex_pod.cpp  sp3_integrate.cpp  test_associated_legendre_functions.cpp  test_atmospheric_density_exponential.cpp  test_bulletin_b.cpp  test_dtm2020.cpp  test_exc32.cpp  test_exc52.cpp  test_exc71.cpp  test_exc83.cpp  test_gauss_jacksson.cpp  test_getCsvFlux.cpp  test_gmst.cpp  test_grav1.cpp  test_gravacc.cpp  test_intergrators.cpp  test_intergrators2.cpp  test_kalman.py  test_kepler.cpp  test_moon_ref.cpp  test_msis00.cpp  test_msis86.cpp  test_msis86.cpp.not-working  test_msis86_2.cpp.not-working  test_myrto.cpp  test_ndop.cc  test_nrlmsise00.cpp  test_ode_example.cpp  test_one_pass.cc  (+27 more)
(+195 files in other folders)
